--- a/src/main/resources/templates/modal_delete_user.html
+++ b/src/main/resources/templates/modal_delete_user.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
-      lang="en">
+<html lang="en">
 
 <body>
 <div th:fragment="copy">
-    <div class="modal fade" th:attr="id=${employee.id}" tabindex="-1" aria-labelledby="edit" aria-hidden="true" >
+    <div class="modal fade" th:attr="id=${'delete'+employee.id}" tabindex="-1" aria-labelledby="edit" aria-hidden="true" >
         <div class="modal-dialog">
             <div class="modal-content">
                 <form class="text-center fw-bold" th:object="${employee}" th:action="@{/admin/employee-update}"
@@ -16,55 +15,42 @@
                                 aria-label="Close"></button>
                     </div>
 
-                    <div class="modal-body col-6 offset-3">
+                    <div class="modal-body col-6 offset-3" >
                         <div class="mb-3">
                             <label for="idEditUser"><strong>ID</strong></label>
                             <input class="form-control" type="number" readonly th:value="${employee.id}" name="id"
                                    id="idEditUser">
-                            <p style="color:red" th:if="${#fields.hasErrors('name')}">Shouldn't be empty</p>
                         </div>
 
                         <div class="mb-3">
                             <label for="nameEditUser" class="form-label">First name</label>
                             <input class="form-control" type="text" th:value="${employee.name}" name="name"
-                                   id="nameEditUser" required>
+                                   id="nameEditUser" readonly>
                         </div>
 
                         <div class="mb-3">
                             <label for="surNameEditUser" class="form-label">Last name</label>
                             <input type="text" class="form-control" id="surNameEditUser" th:value="${employee.surName}"
-                                   name="surName" required>
+                                   name="surName" readonly>
                         </div>
 
 
                         <div class="mb-3">
                             <label for="ageEditUser" class="form-label">Age</label>
                             <input type="number" class="form-control" id="ageEditUser" th:value="${employee.age}"
-                                   name="age" required>
+                                   name="age" readonly>
                         </div>
 
                         <div class="mb-3">
                             <label for="emailEditUser" class="form-label">Email</label>
                             <input type="email" class="form-control" id="emailEditUser" th:value="*{email}"
-                                   name="email" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="passwordConfirmEditUser" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="passwordConfirmEditUser"
-                                   th:value="${employee.passwordConfirm}" name="passwordConfirm">
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="passwordEditUser" class="form-label">Password should be hidden</label>
-                            <input type="text" class="form-control" readonly th:value="*{password}"
-                                   id="passwordEditUser" name="password">
+                                   name="email" readonly>
                         </div>
 
                         <label for="roleEditUser" class="form-label">Role</label>
                         <select class="form-select mb-3" size="2" aria-label="size 2 select example"
-                                id="roleEditUser" th:value="${employee.roles}" name="roles" required>
-                            <option th:each="role : ${roleSet}"
+                                id="roleEditUser" th:value="${employee.roles}" name="roles" readonly>
+                            <option th:each="role : ${employee.roles}"
                                     th:value="${role.id}"
                                     th:text="${role.name}">
                             </option>
@@ -75,7 +61,7 @@
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                             Close
                         </button>
-                        <button type="submit" class="btn btn-primary">Edit
+                        <button type="submit" class="btn btn-primary">Delete
                         </button>
                     </div>
                 </form>
