--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -3,17 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml"
       lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
 <body>
 <div th:fragment="copy">
-
-
     <div class="col-12 bg-light border border-bottom-0 py-3">
         <h5 class="ps-3 m-0 first-table">All users</h5>
     </div>
@@ -29,8 +20,8 @@
                         <th scope="col">ID</th>
                         <th scope="col">First Name</th>
                         <th scope="col">Last Name</th>
-                        <th scope="col">Department</th>
-                        <th scope="col">Salary</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Age</th>
                         <th scope="col">Role</th>
                         <th scope="col">Edit</th>
                         <th scope="col">Delete</th>
@@ -47,24 +38,18 @@
                         <td th:text="*{emp.age}"></td>
                         <td th:text="*{emp.getPureRoles()}"></td>
                         <td>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-th-rows="${emp}"
+                            <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal" data-th-rows="${emp}"
                                     th:attr="data-bs-target=${'#'+emp.id}"> Edit
                             </button>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-th-rows="${emp}"
+                            <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-th-rows="${emp}"
                                     th:attr="data-bs-target=${'#delete'+emp.id}"> Delete
                             </button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <!-------------------------------------------------------------------------------------------------------------------->
-                <!-------------------------------------------------------------------------------------------------------------------->
-                <!-- Modal -->
-
-                <!-------------------------------------------------------------------------------------------------------------------->
-                <!-------------------th:attr="id=${employee.getId()}"------------------------------------------------------------------------------------------------->
             </div>
         </div>
 
