--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -25,18 +25,23 @@
         <div class="row bg-light " style="height: 100%">
             <div class="col-2  bg-body px-0 pt-3">
                 <div class="nav nav-pills flex-column">
-                    <a class="nav-link" href="/admin/employees">Admin</a>
-                    <a class="nav-link active rounded-1" aria-current="page" href="#">User</a>
+                    <div sec:authorize="!hasRole('ROLE_ADMIN')">
+                        <a class="nav-link active rounded-1" aria-current="page" href="#">User</a>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link" href="/admin/employees">Admin</a>
+                        <a class="nav-link active rounded-1" aria-current="page" href="#">User</a>
+                    </div>
                 </div>
             </div>
 
             <div class="col-md-10 px-4 pt-3 bg-light">
                 <!-- the follow column is for table-->
                 <div class="col-12">
-                    <h4>User information page</h4>
+                    <h1>User information page</h1>
                 </div>
                 <div class="col-12 bg-light border border-bottom-0">
-                    <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
+                    <h5 class="ps-3 py-3 m-0 first-table">About user</h5>
                 </div>
                 <div class="col-12 bg-body border px-3 pb-3">
                     <table class="table caption-top table-striped table-hover
