--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -46,7 +46,7 @@
                         </div>
                         <!-- table of new user -->
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                                <div th:insert="new_user_table :: copy"></div>
+                            <div th:insert="new_user_table :: copy"></div>
                         </div>
                     </div>
                 </div>
@@ -61,6 +61,6 @@
 <!-- ******************************************************************************************************* -->
 <!-- ******************************************************************************************************* -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<script src="/js/fillUserTable_forAdmin.js"></script>
 </body>
 </html>
