--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -60,14 +60,14 @@
 
                         <tbody>
 
-                        <tr class="table-active border-top">
+                        <!--<tr class="table-active border-top">
                             <td th:text="${employees.id}"></td>
                             <td th:text="${employees.name}"></td>
                             <td th:text="${employees.surName}"></td>
                             <td th:text="${employees.email}"></td>
                             <td th:text="${employees.age}"></td>
                             <td th:text="${employees.getPureRoles()}"></td>
-                        </tr>
+                        </tr>-->
                         </tbody>
                     </table>
                 </div>
@@ -75,5 +75,10 @@
         </div>
     </div>
 </main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="/js/fillUserTable_forAdmin.js"></script>
+
+
 </body>
 </html>
