--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -48,6 +48,10 @@
                                 <input type="text" class="form-control" id="recipient-name">
                             </div>
                             <div class="mb-3">
+                                <label for="recipient-name1" class="col-form-label">Получатель:</label>
+                                <input type="text" class="form-control" id="recipient-name1">
+                            </div>
+                            <div class="mb-3">
                                 <label for="message-text" class="col-form-label">Сообщение:</label>
                                 <textarea class="form-control" id="message-text"></textarea>
                             </div>
