--- a/src/main/resources/templates/modals/modal_delete_user.html
+++ b/src/main/resources/templates/modals/modal_delete_user.html
@@ -6,8 +6,8 @@
     <div class="modal fade" th:attr="id=${'delete'+employee.id}" tabindex="-1" aria-labelledby="edit" aria-hidden="true" >
         <div class="modal-dialog">
             <div class="modal-content">
-                <form class="text-center fw-bold" th:object="${employee}" th:action="@{/admin/employee-delete/{id}(id=${employee.id})}"
-                      method="get" th:id="${employee.id}">
+                <form id="deleteUser" class="text-center fw-bold" th:object="${employee}" th:action="@{/admin/employee-delete/{id}(id=${employee.id})}"
+                      method="post">
 
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="e">Edit user</h1>
@@ -53,7 +53,8 @@
                                 id="roleEditUser" th:placeholder="${employee.roles}" th:size="${employee.roles.size()}" name="roles">
                             <option th:each="role : ${employee.roles}"
                                     th:value="${role.id}"
-                                    th:text="${role.name}">
+                                    th:text="${role.name}"
+                            >
                             </option>
                         </select>
                     </div>
