--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -74,6 +74,47 @@
             </div>
         </div>
     </div>
+
+    <form id="mars-once" action="/apply/" method="POST">
+        <label>
+            Ваше имя:
+            <input type="text" name="name" id="name" placeholder="Илон Маск" required autofocus>
+        </label>
+
+        <label>
+            Почта:
+            <input type="email" name="email" id="email" placeholder="elon@musk.com" required>
+        </label>
+
+        <label>
+            Возраст:
+            <input type="number" name="age" required>
+        </label>
+
+        <label>
+            Профессия:
+            <select name="specialization" required>
+                <option value="engineer" selected>Инженер</option>
+                <option value="scientist">Учёный</option>
+                <option value="psychologist">Психолог</option>
+                <option value="other">Другая</option>
+            </select>
+        </label>
+
+        <label>
+            Я работал в NASA
+            <input type="checkbox" name="nasa-experience" value="1">
+        </label>
+
+        <label>
+            Фото:
+            <input type="file" accept="image/jpeg" name="photo" required>
+        </label>
+
+        <button type="submit">Отправить заявку</button>
+    </form>
+
+
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
