--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -34,65 +34,7 @@
 
 
 
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Новое сообщение</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="deleteUser1">
-                            <!-- ---- start form ------- -->
-                            <fieldset disabled>
-                                <div class="modal-body col-6 offset-3" >
-                                    <div class="mb-3">
-                                        <label for="idEditUser">ID</label>
-                                        <input class="form-control" type="number" name="id" id="idEditUser">
-                                    </div>
-
-                                    <div class="mb-3">
-                                        <label for="nameEditUser" class="form-label">First name</label>
-                                        <input class="form-control" type="text" name="name" id="nameEditUser">
-                                    </div>
-
-                                    <div class="mb-3">
-                                        <label for="surNameEditUser" class="form-label">Last name</label>
-                                        <input type="text" class="form-control" id="surNameEditUser" name="surName">
-                                    </div>
-
-
-                                    <div class="mb-3">
-                                        <label for="ageEditUser" class="form-label">Age</label>
-                                        <input type="number" class="form-control" id="ageEditUser" name="age">
-                                    </div>
-
-                                    <div class="mb-3">
-                                        <label for="emailEditUser" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="emailEditUser" name="email">
-                                    </div>
-
-                                    <label for="roleEditUser" class="form-label">Role</label>
-                                    <select class="form-select mb-3" size="2" aria-label="size 2 select example"
-                                            id="roleEditUser" name="roles">
-                                    </select>
-                                </div>
-                            </fieldset>
-                            <!-- -----end form -------- -->
-                            <button type="submit" class="btn btn-primary">Отправить сообщение FORM</button>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                        <button type="button" class="btn btn-primary">Отправить сообщение</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-
+        <div th:insert="modals/modal_delete_user :: copy"></div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
