modal update(in process)

--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -31,10 +31,78 @@
                     </tbody>
                 </table>
 
-
-
-
         <div th:insert="modals/modal_delete_user :: copy"></div>
+        <!-- ----- start after finished should transfer to modal_update_user.html ------ -->
+        <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form id="deleteUser1" class="text-center fw-bold">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="e">Edit user</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                                <div class="modal-body col-6 offset-3">
+                                    <div class="mb-3">
+                                        <label for="notEdit">ID</label>
+                                        <input class="form-control" disabled type="text" name="idShow" id="notEdit">
+                                    </div>
+                                    <div class="mb-3">
+                                        <input class="form-control" readonly type="hidden" name="id" id="transmissionToJS">
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="nameEditUser" class="form-label">First name</label>
+                                        <input class="form-control" type="text" name="name" id="nameEditUser">
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="surNameEditUser" class="form-label">Last name</label>
+                                        <input type="text" class="form-control" id="surNameEditUser" name="surName">
+                                    </div>
+
+
+                                    <div class="mb-3">
+                                        <label for="ageEditUser" class="form-label">Age</label>
+                                        <input type="number" class="form-control" id="ageEditUser" name="age">
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="emailEditUser" class="form-label">Email</label>
+                                        <input type="email" class="form-control" id="emailEditUser" name="email">
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label for="passwordConfirmEditUser" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="passwordConfirmEditUser"
+                                               name="passwordConfirm">
+                                    </div>
+
+                                    <div>
+                                        <input type="hidden" class="form-control" readonly id="passwordEditUser"
+                                               name="password">
+                                    </div>
+
+                                    <label for="roleEditUser1" class="form-label">Role</label>
+                                    <select class="form-select mb-3" size="2" aria-label="size 2 select example"
+                                            id="roleEditUser1" name="roles">
+                                    </select>
+                                </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Update</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- ----- end after finished should transfer to modal_update_user.html -------- -->
+
+
+
+
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
