modal update(in process: user transfer created)

--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -36,7 +36,7 @@
         <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <form id="deleteUser1" class="text-center fw-bold">
+                    <form id="userFormUpdate" class="text-center fw-bold">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5" id="e">Edit user</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal"
