modal update(need to fix the tole transfer)

--- a/src/main/resources/templates/all_users_table.html
+++ b/src/main/resources/templates/all_users_table.html
@@ -86,7 +86,7 @@
 
                                     <label for="roleEditUser1" class="form-label">Role</label>
                                     <select class="form-select mb-3" size="2" aria-label="size 2 select example"
-                                            id="roleEditUser1" name="roles">
+                                            id="roleEditUser1" multiple name="roles">
                                     </select>
                                 </div>
                         </div>
